[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://art/Player/GrayTile.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "finish_slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.353553, 0.267943 ),
"update": 0,
"values": [ Vector2( 1, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "start_slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.0669857, 0.353553 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.6 ) ]
}

[sub_resource type="AnimationNodeStateMachine" id=4]

[sub_resource type="AnimationNodeStateMachinePlayback" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25.5, 25 )

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 9
script = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.84375, 0.84375 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.2, 1.2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/finish_slide = SubResource( 3 )
anims/start_slide = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 4 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 1 )
shape = SubResource( 6 )

[node name="EdgeRayJump" type="RayCast2D" parent="."]
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 500, -450 )

[node name="WallRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 27, 0 )

[node name="CeillingRay" type="RayCast2D" parent="."]
position = Vector2( -28, 26 )
enabled = true
cast_to = Vector2( 0, -54 )
